python-compiler/tests/snapshots/lib__floats__mixed_int_float_arithmetic.snap
---
source: tests/floats.rs
assertion_line: 34
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

@float_format_string = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1

define i32 @main() {
entry:
  %printf_call = call i32 (ptr, ...) @printf(ptr @float_format_string, double 7.500000e+00)
  ret i32 0
}

declare i32 @printf(ptr, ...)
